--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable",
     "build": "npm run clean && tsc --project .",
     "clean": "rimraf lib/ yarn-error.log npm-debug.log",
     "lint": "eslint . --ext .ts",
@@ -27,42 +30,38 @@
     "types"
   ],
   "devDependencies": {
-    "@commitlint/cli": "8.2.0",
-    "@commitlint/config-conventional": "8.2.0",
-    "@semantic-release/changelog": "3.0.2",
-    "@semantic-release/git": "7.0.8",
-    "@types/dompurify": "0.0.32",
-    "@types/enzyme": "3.9.3",
-    "@types/jest": "24.0.13",
-    "@types/react": "16.8.18",
-    "@typescript-eslint/eslint-plugin": "1.9.0",
-    "@typescript-eslint/parser": "1.9.0",
-    "conventional-changelog-eslint": "3.0.1",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.13.1",
-    "eslint": "5.16.0",
-    "eslint-config-prettier": "4.3.0",
-    "eslint-plugin-prettier": "3.1.0",
-    "husky": "2.3.0",
-    "jest": "24.8.0",
-    "prettier": "1.17.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "rimraf": "2.6.3",
-    "semantic-release": "15.13.27",
-    "ts-jest": "24.0.2",
-    "typescript": "3.4.5"
+    "@commitlint/cli": "12.0.1",
+    "@commitlint/config-conventional": "12.0.1",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "9.0.0",
+    "@types/dompurify": "2.2.1",
+    "@types/enzyme": "3.10.8",
+    "@types/jest": "26.0.22",
+    "@types/react": "17.0.3",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
+    "conventional-changelog-eslint": "3.0.9",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "eslint": "7.23.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "husky": "5.2.0",
+    "jest": "26.6.3",
+    "pinst": "2.1.6",
+    "prettier": "2.2.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rimraf": "3.0.2",
+    "semantic-release": "17.4.2",
+    "ts-jest": "26.5.4",
+    "typescript": "4.2.3"
   },
   "dependencies": {
-    "dompurify": "2.0.7"
+    "dompurify": "2.2.7"
   },
   "peerDependencies": {
     "react": "^16.2.0"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS --extends @commitlint/config-conventional"
-    }
   },
   "jest": {
     "preset": "ts-jest",
