--- a/package.json
+++ b/package.json
@@ -30,38 +30,38 @@
     "types"
   ],
   "devDependencies": {
-    "@commitlint/cli": "12.0.1",
-    "@commitlint/config-conventional": "12.0.1",
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-conventional": "12.1.1",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
-    "@types/dompurify": "2.2.1",
+    "@types/dompurify": "2.2.2",
     "@types/enzyme": "3.10.8",
-    "@types/jest": "26.0.22",
-    "@types/react": "17.0.3",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@types/jest": "26.0.23",
+    "@types/react": "17.0.5",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
     "conventional-changelog-eslint": "3.0.9",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
-    "eslint": "7.23.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "husky": "5.2.0",
+    "eslint": "7.26.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "husky": "6.0.0",
     "jest": "26.6.3",
     "pinst": "2.1.6",
-    "prettier": "2.2.1",
+    "prettier": "2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "3.0.2",
     "semantic-release": "17.4.2",
-    "ts-jest": "26.5.4",
-    "typescript": "4.2.3"
+    "ts-jest": "26.5.6",
+    "typescript": "4.2.4"
   },
   "dependencies": {
-    "dompurify": "2.2.7"
+    "dompurify": "2.2.8"
   },
   "peerDependencies": {
-    "react": "^16.2.0"
+    "react": "^16.2.0 || ^17.0.0"
   },
   "jest": {
     "preset": "ts-jest",
