--- a/package.json
+++ b/package.json
@@ -30,35 +30,35 @@
     "types"
   ],
   "devDependencies": {
-    "@commitlint/cli": "12.1.1",
-    "@commitlint/config-conventional": "12.1.1",
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "@types/dompurify": "2.2.2",
     "@types/enzyme": "3.10.8",
     "@types/jest": "26.0.23",
-    "@types/react": "17.0.5",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@types/react": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.26.1",
+    "@typescript-eslint/parser": "4.26.1",
     "conventional-changelog-eslint": "3.0.9",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
-    "eslint": "7.26.0",
+    "eslint": "7.28.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
     "husky": "6.0.0",
-    "jest": "26.6.3",
+    "jest": "27.0.4",
     "pinst": "2.1.6",
-    "prettier": "2.3.0",
+    "prettier": "2.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rimraf": "3.0.2",
-    "semantic-release": "17.4.2",
-    "ts-jest": "26.5.6",
-    "typescript": "4.2.4"
+    "semantic-release": "17.4.3",
+    "ts-jest": "27.0.3",
+    "typescript": "4.3.2"
   },
   "dependencies": {
-    "dompurify": "2.2.8"
+    "dompurify": "2.2.9"
   },
   "peerDependencies": {
     "react": "^16.2.0 || ^17.0.0"
@@ -70,6 +70,7 @@
     },
     "setupFilesAfterEnv": [
       "<rootDir>tests/setupTests.js"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   }
 }
