--- a/package.json
+++ b/package.json
@@ -28,31 +28,31 @@
     "types"
   ],
   "devDependencies": {
-    "@commitlint/cli": "16.2.3",
-    "@commitlint/config-conventional": "16.2.1",
-    "@semantic-release/changelog": "6.0.1",
+    "@commitlint/cli": "17.6.7",
+    "@commitlint/config-conventional": "17.6.7",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "@types/dompurify": "2.3.3",
-    "@types/enzyme": "3.10.11",
-    "@types/jest": "27.4.1",
-    "@types/react": "17.0.43",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "conventional-changelog-eslint": "3.0.9",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
-    "eslint": "8.12.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "husky": "7.0.4",
-    "jest": "27.5.1",
-    "prettier": "2.6.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "rimraf": "3.0.2",
-    "semantic-release": "19.0.2",
-    "ts-jest": "27.1.4",
-    "typescript": "4.6.3"
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "14.0.0",
+    "@types/dompurify": "3.0.2",
+    "@types/jest": "29.5.3",
+    "@types/react": "18.2.17",
+    "@typescript-eslint/eslint-plugin": "6.2.0",
+    "@typescript-eslint/parser": "6.2.0",
+    "conventional-changelog-eslint": "4.0.0",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "husky": "8.0.3",
+    "jest": "29.6.2",
+    "jest-environment-jsdom": "29.6.2",
+    "prettier": "3.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rimraf": "5.0.1",
+    "semantic-release": "21.0.7",
+    "ts-jest": "29.1.1",
+    "typescript": "5.1.6"
   },
   "dependencies": {
     "dompurify": "2.3.6"
@@ -65,9 +65,6 @@
     "moduleNameMapper": {
       "\\.(css|less|sass|scss)$": "<rootDir>/tests/styleMock.js"
     },
-    "setupFilesAfterEnv": [
-      "<rootDir>tests/setupTests.js"
-    ],
     "testEnvironment": "jsdom"
   }
 }
