--- a/package.json
+++ b/package.json
@@ -28,34 +28,34 @@
     "types"
   ],
   "devDependencies": {
-    "@commitlint/cli": "17.6.7",
-    "@commitlint/config-conventional": "17.6.7",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/git": "10.0.1",
-    "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "14.0.0",
-    "@types/dompurify": "3.0.2",
-    "@types/jest": "29.5.3",
-    "@types/react": "18.2.17",
-    "@typescript-eslint/eslint-plugin": "6.2.0",
-    "@typescript-eslint/parser": "6.2.0",
-    "conventional-changelog-eslint": "4.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "8.9.0",
-    "eslint-plugin-prettier": "5.0.0",
-    "husky": "8.0.3",
-    "jest": "29.6.2",
-    "jest-environment-jsdom": "29.6.2",
-    "prettier": "3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rimraf": "5.0.1",
-    "semantic-release": "21.0.7",
-    "ts-jest": "29.1.1",
-    "typescript": "5.1.6"
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/dompurify": "^3.0.5",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.48",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "conventional-changelog-eslint": "^5.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "semantic-release": "^23.0.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dompurify": "3.0.5"
+    "dompurify": "^3.0.8"
   },
   "peerDependencies": {
     "react": "^16.2.0 || ^17.0.0 || ^18.0.0"
